--- a/src/assets/styles/components/siteDecorator.scss
+++ b/src/assets/styles/components/siteDecorator.scss
@@ -10,6 +10,7 @@
   left: 0;
   height: 100%;
   width: 100%;
+  overflow: hidden;
   z-index: -1;
 
   .circle {
