--- a/src/assets/styles/foundation/_general.scss
+++ b/src/assets/styles/foundation/_general.scss
@@ -13,7 +13,6 @@ body {
   background-color: $primary;
   width: 100%;
   max-width: 100vw;
-  overflow: hidden;
 
   @media screen and (min-width: #{$md-size}) {
     --container-max-width: #{$md-size};
